@@ -39,10 +39,13 @@ public interface Type<T extends Comparable<T>> extends Comparable<Type<T>> {
     
     class Factory {
         
+        private Factory() {
+            // private constructor to enforce static access
+        }
+        
         public static Type<?> createType(String datawaveTypeClassName) {
-            
             try {
-                return (Type<?>) Class.forName(datawaveTypeClassName).newInstance();
+                return (Type<?>) Class.forName(datawaveTypeClassName).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw new IllegalArgumentException("Error creating instance of class " + datawaveTypeClassName + ':' + e.getLocalizedMessage(), e);
             }
